--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,25 +1,16 @@
-<li>
-  <a href="{{ site.url }}">
-    <i class="fas fa-home"></i> Home
-  </a>
-</li>
-<li>
-  <a href="https://github.com/daigofuji/jekyll-foundation-6-starter">
-    <i class="fab fa-github"></i> Source
-  </a>
-</li>
-<li>
-  <a href="page-html-unit-test.html">
-    <i class="fas fa-flask"></i> Unit Test
-  </a>
-</li>
-<li>
-  <a href="page-foundation-example.html">
-    <i class="fas fa-magic"></i> Foundation
-  </a>
-</li>
-<li>
-  <a href="page-template-example.html">
-    <i class="fas fa-object-group"></i> Template
-  </a>
-</li>
+
+<!-- START ON CANVAS MENU -->
+    <div class="title-bar">
+      <div class="title-bar-left">
+        <h4 class="title-bar-title font-heavy mas"><a href="{{ site.url }}">{{ site.brand }}</a></h4>
+      </div>
+      <div class="title-bar-right mts">
+        <div class="show-for-medium menu align-right simple quiet">
+          {% include menu.html %}
+        </div>
+        <ul class="hide-for-medium menu align-right simple">
+          <li><button class="secondary button" data-toggle="offCanvas" type="button"><i aria-hidden="true" class="fas fa-bars"></i> MENU</button></li>
+        </ul>
+      </div>
+    </div>
+  <!-- END ON CANVAS MENU-->
